--- a/layouts/partials/slides/slide.html
+++ b/layouts/partials/slides/slide.html
@@ -10,8 +10,10 @@
 	{{ $imgs = . }}
 {{ end }}
 
+{{ $multiCol := .ctx.Params.multipleColumn | default .ctx.Site.Params.multipleColumn | default false }}
+
 {{ $includesInfo := false }}
-{{ if or (and (gt (len $imgs) 1) (not .ctx.Params.multipleColumn)) (gt (len .ctx.Content) 0) }}
+{{ if or (and (gt (len $imgs) 1) (not $multiCol)) (gt (len .ctx.Content) 0) }}
 	{{ $includesInfo = true }}
 {{ end }}
 <div class="slide" {{ if $includesInfo }} info="true" {{ end }} path="{{ $.ctx.Page.RelPermalink }}">
@@ -25,9 +27,9 @@
 						</div>
 					{{ end }}
 				{{ end }}
-				<div {{ if .ctx.Params.multipleColumn }} class="columns center" {{ end }}>
+				<div {{ if $multiCol }} class="columns center" {{ end }}>
 					{{ range $i, $img := $imgs }}
-						<div {{ if $.ctx.Params.multipleColumn }} class="column" {{ end }}>
+						<div {{ if $multiCol }} class="column" {{ end }}>
 							<img src="{{ $img.RelPermalink }}" loading="lazy" width="{{ $img.Width }}" height="{{ $img.Height }}" />
 						</div>
 					{{ end }}
