--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -6,7 +6,7 @@
     <div class="navbar-start">
         <div class="logo">
             <a href={{ relref . $homeLink }}>
-                <img class="logo" src={{ "logo.png" | absURL }}>
+                <img class="logo" src={{ .Site.Params.Logo | absURL }}>
             </a>
         </div>
     </div>
