Improve text color for welcome page.

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,7 +6,7 @@
 </head>
 {{ else }}
 <section class="hero is-fullheight welcome"
-	style="background-image: url({{ .Site.Params.image | absURL }});background-position: 50% 20%">
+	style="background-image: url({{ .Site.Params.image | absURL }});">
 	{{ partial "navbar.html" . }}
 	<div class="hero-body has-text-centered">
 		<div class="container">
