--- a/layouts/partials/slides/slide.html
+++ b/layouts/partials/slides/slide.html
@@ -11,6 +11,10 @@
 {{ end }}
 
 {{ $multiCol := .ctx.Params.multipleColumn | default .ctx.Site.Params.multipleColumn | default false }}
+{{ $numCols := .ctx.Params.columnCount | default .columnCount | default 1 }}
+{{ if not $multiCol }}
+	{{ $numCols = 1 }}
+{{ end }}
 
 {{ $includesInfo := false }}
 {{ if or (and (gt (len $imgs) 1) (not $multiCol)) (gt (len .ctx.Content) 0) }}
@@ -28,10 +32,13 @@
 					{{ end }}
 				{{ end }}
 				<div {{ if $multiCol }} class="columns center" {{ end }}>
+					{{ $currentCol := 0 }}
 					{{ range $i, $img := $imgs }}
-						<div {{ if $multiCol }} class="column" {{ end }}>
-							<img src="{{ $img.RelPermalink }}" loading="lazy" width="{{ $img.Width }}" height="{{ $img.Height }}" />
-						</div>
+						{{ if div $numCols $i }}<div class="column">{{ end }}
+							<div>
+								<img src="{{ $img.RelPermalink }}" loading="lazy" width="{{ $img.Width }}" height="{{ $img.Height }}" />
+							</div>
+						{{ if div  }}</div>{{ end }}
 					{{ end }}
 				</div>
 				{{ if not .ctx.Site.Params.MoveIt }}
