--- a/layouts/partials/slides/slide.html
+++ b/layouts/partials/slides/slide.html
@@ -32,14 +32,20 @@
 					{{ end }}
 				{{ end }}
 				<div {{ if $multiCol }} class="columns center" {{ end }}>
-					{{ $currentCol := 0 }}
-					{{ range $i, $img := $imgs }}
-						<!-- {{ if div $numCols $i }}<div class="column">{{ end }} -->
+					{{ $currentCol := 0 -}}
+					{{ range $i, $img := $imgs -}}
+						{{ $imgNum := add 1 $i -}}
+						{{ $nextBreakpoint := div (mul $currentCol (len $imgs)) $numCols -}}
+						{{ if gt $imgNum $nextBreakpoint -}}
+							{{ if ne 0 $currentCol }}</div>{{ end -}}
+							<div class="column">
+							{{- $currentCol = add 1 $currentCol -}}
+						{{ end -}}
 							<div>
 								<img src="{{ $img.RelPermalink }}" loading="lazy" width="{{ $img.Width }}" height="{{ $img.Height }}" />
 							</div>
-						<!-- {{ if div  }}</div>{{ end }} -->
-					{{ end }}
+					{{ end -}}
+					</div>
 				</div>
 				{{ if not .ctx.Site.Params.MoveIt }}
 					{{ partial "slides/meta" (dict "imgs" $imgs "ctx" .ctx) }}
